<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background">

    <!-- Top Bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/ai_top_bar_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/ai_screen_padding"
        android:paddingEnd="@dimen/ai_small_padding"
        android:background="@color/card_surface"
        android:elevation="@dimen/ai_top_bar_elevation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/aiAssistantIcon"
            android:layout_width="@dimen/ai_header_icon_size"
            android:layout_height="@dimen/ai_header_icon_size"
            android:contentDescription="@string/ai_assistant_icon_description"
            android:src="@drawable/ic_ai_assistant"
            app:tint="@color/blueDark" />

        <TextView
            android:id="@+id/aiStudyAssistantTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/ai_small_margin"
            android:text="@string/ai_study_assistant_title"
            android:textColor="@color/text_main"
            android:textSize="@dimen/ai_title_text_size"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="@dimen/ai_header_button_size"
            android:layout_height="@dimen/ai_header_button_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu_icon_description"
            android:src="@drawable/ic_more_vert"
            app:tint="@color/text_muted" />

    </LinearLayout>


    <!-- Dynamic Chat Area -->
    <ScrollView
        android:id="@+id/chatScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:padding="@dimen/ai_screen_padding"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/messageArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/chatContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--
                Messages are added dynamically from
                AIStudyAssistantActivity.kt
            -->

        </LinearLayout>

    </ScrollView>


    <!-- Message Input Area -->
    <LinearLayout
        android:id="@+id/messageArea"
        android:layout_width="0dp"
        android:layout_height="@dimen/ai_message_area_height"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/ai_small_padding"
        android:paddingEnd="@dimen/ai_small_padding"
        android:background="@color/card_surface"
        android:elevation="@dimen/ai_input_area_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/ai_input_height"
            android:layout_weight="1"
            android:background="@drawable/bg_message_input"
            android:hint="@string/message_input_hint"
            android:paddingStart="@dimen/ai_input_horizontal_padding"
            android:paddingEnd="@dimen/ai_input_horizontal_padding"
            android:inputType="textCapSentences|textMultiLine"
            android:imeOptions="actionSend"
            android:maxLines="@integer/ai_input_max_lines"
            android:textColor="@color/text_main"
            android:textColorHint="@color/text_muted"
            android:textSize="@dimen/ai_input_text_size" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="@dimen/ai_send_button_size"
            android:layout_height="@dimen/ai_send_button_size"
            android:layout_marginStart="@dimen/ai_send_button_margin"
            android:background="@drawable/bg_send_button"
            android:contentDescription="@string/send_button_description"
            android:padding="@dimen/ai_send_icon_padding"
            android:src="@drawable/ic_send"
            app:tint="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
